2012-12-03  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: added function to check whether R development
        tools are currently installed

2012-12-03 Romain Francois <romain@r-enthusiasts.com>

        * src/Module.cpp: move BEGIN_RCPP/END_RCPP to Module__invoke
        * src/coerce.cpp: added coerce_to_string implementations
        * include/RcppCommon.h : nicer formatting for RCPP_DEBUG_*, now up to 
        RCPP_DEBUG_5
        * include/Rcpp/vector/Vector.h: debugging
        * include/Rcpp/String.h: The String class
        * include/Rcpp/as.h: support for String
        * include/Rcpp/vector/converter.h : support for String
        * include/Rcpp/vector/string_proxy.h: support for String
        * include/Rcpp/internal/wrap.h : support for String
        * include/Rcpp/internal/r_coerce.h: support for String
        * include/Rcpp/sugar/functions/sapply.h: debugging
        * include/Rcpp/traits/wrap_type_traits.h: support for String
        * include/Rcpp/traits/r_type_traits.h: support for String
        * unitTests/cpp/String.cpp : unit tests for String
        * unitTests/runit.String.R: unit test for String
        * include/Rcpp/sugar/sets.h: support for String

2012-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Applied patch by Yan Zhou to add support
	for clang++ with libc++, and Intel's icpc when std=c++11

2012-11-29 Romain Francois <romain@r-enthusiasts.com>

        * unitTests/runit.DataFrame.R: using sourceCpp
        * include/Rcpp/vector/Matrix.h: fix yet another const correctness issue

2012-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h: Check before deleting buf

2012-11-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.1
        * inst/NEWS.Rd: Release 0.10.1
        * inst/include/Rcpp/config.h: Release 0.10.1
        * debian/*: Similarly updated for new release to Debian

	* DESCRIPTION: Added paragraph about Rcpp attributes