@@ -1,3 +1,11 @@
+2012-12-04 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/hash/hash.h: new implementation of IndexHash, based on 
+        Simon's fastmatch package
+        * include/Rcpp/hash/hash_impl.h: low level implementation details
+        * include/Rcpp/sugar/functions/match.h: using new IndexHash
+        * src/fastmatch.c : largely inspired from Simon's fastmatch
+
 2012-12-03  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: added function to check whether R development
@@ -22,7 +30,7 @@
         * unitTests/cpp/String.cpp : unit tests for String
         * unitTests/runit.String.R: unit test for String
         * include/Rcpp/sugar/sets.h: support for String
-
+        
 2012-12-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/RcppCommon.h: Applied patch by Yan Zhou to add support
